# RBT

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  Cargo.toml  ENHANCED-FEATURES.md  IMPLEMENTATION_PLAN_ADVANCED.md  INSTALL.md  INTERACTIVE-GUIDE.md  ONE-LINE-INSTALL.md  OPERATIONS.md  PROJECT-ENHANCEMENT-SUMMARY.md  README.fa.md  README.md  README.ru.md  README.zh.md  README_FA.md  README_RU.md  README_ZH.md  RESEARCH_CENSORSHIP_RESISTANCE.md  SECURITY.md  dashboard.db  install-complete-enhanced.sh  install-complete.sh  install-dns-manager.sh  install-enhanced.sh  install-interactive.sh  install-persian.sh  install.sh  metadata.json  package-lock.json  package.json  rbt-security.json  server.ts  test-toml.ts
assets/: default-config.toml
crates/rbt-audit/: Cargo.toml
crates/rbt-cert/: Cargo.toml
crates/rbt-cli/: Cargo.toml
crates/rbt-cli/src/: main.rs
crates/rbt-config/: Cargo.toml
crates/rbt-core/: Cargo.toml
crates/rbt-discovery-dpd/: Cargo.toml
crates/rbt-observability/: Cargo.toml
crates/rbt-research-tcr/: Cargo.toml
crates/rbt-runtime/: Cargo.toml
crates/rbt-runtime/src/: auth.rs  lib.rs
crates/rbt-service/: Cargo.toml
rbt/: README_DNS.md  dns_automation.py  dns_config.json  dns_manager.py  dns_tunnel.py  iran_network_tester.py
rbt/data/: dns_servers_comprehensive.py
scripts/: config-manager.ts  enhanced-installer.ts  interactive-installer.ts  monitor.ts  rbt-menu.ts  rbt-ui.ts  security-manager.ts  setup-hcaptcha.ts  test-suite.ts  toggle-hcaptcha.ts
server/config/: security.ts
server/controllers/: authController.ts  trafficController.ts  tunnelController.ts
server/routes/: api.ts
server/services/: configService.ts  dbService.ts  systemService.ts
src/: App.tsx
src/components/: AddTunnelForm.tsx  DashboardView.tsx  Login.tsx  LogsView.tsx  (+4 more)
(+12 files in other folders)
